# mcapi-rs

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: images.yml
src/: image.rs  main.rs  protocol.rs  resolver.rs  types.rs
static/scripts/: minecraft.js  minecraft.min.js
static/site/: index.html  site.min.js
