[package]
name = "mcapi-rs"
version = "0.1.0"
edition = "2018"
authors = ["Syfaro <syfaro@huefox.com>"]
license = "MIT"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-unwrap = "0.9"

thiserror = "1"

prometheus = { version = "0.12", features = ["process"] }

tokio = { version = "1", features = ["net", "macros"] }
futures-retry = "0.6"

trust-dns-resolver = "0.20"
rand = "0.8"
lru = "0.6"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

actix-web = "4.0.0-beta.8"
actix-files = "0.6.0-beta.6"
tracing-actix-web = "0.4.0-beta.10"
actix-cors = "0.6.0-beta.2"

redis = { version = "0.21", features = ["tokio-comp"] }
redlock = { path = "../redlock-rs" }

base64 = "0.13"
lazy_static = "1"

image = "0.23"
imageproc = "0.22"
rusttype = "0.9"
